- Fixed logo on mobile devices
- Slightly brother map
- Fixed problem of overflowing base content

--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,6 +1,6 @@
 agm-map {
     width: 100%;
-    height: 850px;
+    height: 1000px;
     position: relative;
     top: -100px;
   }
@@ -9,6 +9,6 @@ agm-map {
     agm-map {
       position: relative;
       top: 25px;
-      height: 450px;
+      height: 550px;
     }
 }
